IM-40 : Sum InvoiceLines are presented without vat for some invoices.